# solar-radiation-prediction

./: .gitignore  README.md  base.py  environment.yaml  hyperparameters.py  main.py  params.py  pyproject.toml  results.pickle
data/processed/: Bobo Dioulasso_xtest.json  Bobo Dioulasso_xtrain.json  Bobo Dioulasso_ytest.json  Bobo Dioulasso_ytrain.json  Boromo_xtest.json  Boromo_xtrain.json  Boromo_ytest.json  Boromo_ytrain.json  Bur Dedougou_xtest.json  Bur Dedougou_xtrain.json  Bur Dedougou_ytest.json  Bur Dedougou_ytrain.json  Dori_xtest.json  Dori_xtrain.json  Dori_ytest.json  Fada N'gourma_xtest.json  Fada N'gourma_xtrain.json  Fada N'gourma_ytest.json  Fada N'gourma_ytrain.json  Gaoua_xtest.json  Gaoua_xtrain.json  Gaoua_ytrain.json  Ouahigouya_xtest.json  Ouahigouya_xtrain.json  Ouahigouya_ytest.json  (+5 more)
models/: search_grid.py  support_vector_machine.py
notebooks/: CVgrid_analysis.ipynb  KFeat_select_grid_analysis.ipynb  eda.ipynb  linear_regression_model.ipynb  norm_test.py  post_processing.ipynb  scenario_2_join_results_data.ipynb
results/: .gitignore  H-0.json  H-1.json  H-2.json  H-3.json  H-4.json  H-5.json  H-6.json  H-7.json  results_1-4.json  results_13-16.json  results_17-20.json  results_21-24.json  results_25-28.json  results_29-30.json  results_5-8.json  results_9-12.json
src/: __init__.py  correlation_graphic.py  data_split.py  model_rebuild_DRAFT.py  modeling_analysis.py  tasks.py
tasks/: correlation_graphic.py  correlation_matrix.py  data_split.py  model_rebuild.py  modeling_analysis.py  results.csv  stat_script.py  visualization_plot_DRAFT.py
(+109 files in other folders)
