[tool.poetry]
name = "solar-radiation-prediction"
version = "0.1.0"
description = "..."
authors = ["Lpverneck <lpverneck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
scikit-learn = "^0.23.1"
hydroeval = "^0.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pycodestyle = "^2.6.0"
notebook = "^6.0.3"
jupyterlab = "^2.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
